Fix content shifting

--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,10 @@ a {
     bottom: 0;
 }
 
+.hideAll {
+    visibility: hidden;
+}
+
 img {
     width: 34px;
     height: 34px;
